fix: remove extra stuff not need for barebone
